# playwright-pulse

./: .gitignore  .markdownlint.json  CHANGELOG.md  README.md  generate-email-report.py  generate-report.py  generate-static-report.py  next.config.ts  package-lock.json  package.json  playwright-pulse-report.json  pyproject.toml  pytest.ini  results.json  sharding.md  tsconfig.json  tsconfig.reporter.json
.github/workflows/: deploy-docs.yml
docs/: advanced-usage.html  blueprint.md  comparison.html  demo.html  dynamic.css  index.html  reference.html  report-features.html  reporters-scripts.html  robots.txt  script.js  search.css  search.js  sharding.html  sitemap.xml  static.css  styles.css  view.html
docs/asset/: background.mp4.lottie.json
docs/javascript/: advanced-usage.html  comparison.html  demo.html  index.html  reference.html  report-features.html  reporters-scripts.html  script.js  search.css  search.js  sharding.html  view.html
docs/pulse-report/: playwright-pulse-report.html  playwright-pulse-report.json  pulse-email-summary.html
docs/pulse-report/attachments/31be70adcd52654ff551-0cb1790c71301a8080a3/: 1-1770874969576-video.webm  1-1770875001555-video.webm  1-1770875033724-video.webm  1-1770875066133-video.webm  1-1770877381079-video.webm  1-1770877413313-video.webm  1-1770877445839-video.webm  1-1770877478468-video.webm  2-1770874969576-error-context.md  2-1770875001556-error-context.md  2-1770875033725-error-context.md  (+5 more)
docs/pulse-report/history/: trend-1767539028957.json  trend-1770874562276.json  trend-1770874903117.json  trend-1770877310807.json
docs/pytest-pulse-report/: playwright-pulse-report.html  playwright-pulse-static-report.html  pulse-email-summary.html
docs/pytest-pulse-report/history/: trend-1778503730040.json  trend-1778503960435.json  trend-1778504724145.json  trend-1778506466680.json
docs/python/: advanced-usage.html  comparison.html  demo.html  index.html  reference.html  report-features.html  reporters-scripts.html  sharding.html  view.html
pulse-report-output/: playwright-pulse-report.json
pytest-pulse-report/: README.md  pyproject.toml
pytest-pulse-report/pytest_pulse/: __init__.py  attachment_utils.py  cli.py  email_sender.py  env_utils.py  html_generator.py  merge_reports.py  plugin.py  report_writer.py
pytest_pulse/: dynamic_generator.py  email_generator.py
scripts/: config-reader.mjs  generate-email-report.mjs  generate-report.mjs  generate-static-report.mjs  generate-trend-excel.mjs  generate-trend.mjs  merge-pulse-report.js  sendReport.js  sendReport.mjs
src/: pulse.ts
src/ai/: dev.ts
src/ai/flows/: analyze-test-failure.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/analysis/: page.tsx
src/app/runs/: page.tsx
src/app/settings/: page.tsx
src/app/tests/: page.tsx
src/app/trends/: page.tsx
src/components/charts/: test-status-pie-chart.tsx  trends-area-chart.tsx
src/components/common/: error-display.tsx
src/components/dashboard/: summary-card.tsx
src/components/layout/: app-header.tsx  app-sidebar.tsx
src/components/test-results/: test-result-item.tsx  test-status-badge.tsx
src/components/ui/: sidebar.tsx  textarea.tsx
src/lib/: data-reader.ts  data.ts  report-types.ts  utils.ts
src/pytest_pulse/: __init__.py  attachment_utils.py  cli.py  console_logo.py  decorators.py  dynamic_generator.py  email_generator.py  email_sender.py  env_utils.py  highcharts.min.js  merge_reports.py  plugin.py  report_writer.py  shared_ui.py  static_generator.py  types.py
src/reporter/: attachment-utils.ts  index.ts  playwright-pulse-reporter.ts
src/types/: index.d.ts  index.ts
src/utils/: compression-utils.ts
(+368 files in other folders)
